--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
         "axios": "^1.11.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "dompurify": "^3.2.7",
+        "highlight.js": "^11.11.1",
         "jspdf": "^3.0.1",
         "lucide-vue-next": "^0.534.0",
+        "markdown-it": "^14.1.0",
         "motion-v": "^1.7.0",
         "openapi-zod-client": "^1.18.3",
         "pinia": "^3.0.3",
@@ -45,7 +48,9 @@
     },
     "devDependencies": {
         "@tsconfig/node22": "^22.0.2",
+        "@types/dompurify": "^3.0.5",
         "@types/jsdom": "^21.1.7",
+        "@types/markdown-it": "^14.1.2",
         "@types/node": "^22.16.5",
         "@vitejs/plugin-vue": "^6.0.1",
         "@vitest/eslint-plugin": "^1.3.4",
